--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -237,6 +237,8 @@
     <ClCompile Include="src\IdLib\IdLib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\IdLib\InvalidArgumentException.hpp" />
+    <ClInclude Include="src\IdLib\OutOfBoundsException.hpp" />
     <ClInclude Include="src\IdLib\RuntimeErrorException.hpp" />
     <ClInclude Include="src\IdLib\AbstractLexicalErrorException.hpp" />
     <ClInclude Include="src\IdLib\AbstractSyntacticalErrorException.hpp" />
