--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -68,6 +68,12 @@
     <ClInclude Include="src\IdLib\RuntimeErrorException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\IdLib\OutOfBoundsException.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\InvalidArgumentException.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\IdLib\CurrentFunction.inline">
