Add debug assert macro

--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -250,6 +250,7 @@
     <ClCompile Include="src\IdLib\IdLib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\IdLib\DebugAssert.hpp" />
     <ClInclude Include="src\IdLib\InvalidArgumentException.hpp" />
     <ClInclude Include="src\IdLib\OutOfBoundsException.hpp" />
     <ClInclude Include="src\IdLib\RuntimeErrorException.hpp" />
