--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="src\IdLib\InvalidArgumentException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\IdLib\DebugAssert.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\IdLib\CurrentFunction.inline">
