--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -254,6 +254,7 @@
     <ClCompile Include="src\IdLib\IdLib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\IdLib\BitmaskTypes.hpp" />
     <ClInclude Include="src\IdLib\DebugAssert.hpp" />
     <ClInclude Include="src\IdLib\InvalidArgumentException.hpp" />
     <ClInclude Include="src\IdLib\OutOfBoundsException.hpp" />
