--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="src\IdLib\DebugAssert.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\IdLib\BitmaskTypes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\IdLib\CurrentFunction.inline">
