--- a/idlib.vcxproj
+++ b/idlib.vcxproj
@@ -250,10 +250,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\IdLib\Signal\ConnectionBase.cpp" />
+    <ClCompile Include="src\IdLib\Signal\NodeBase.cpp" />
+    <ClCompile Include="src\IdLib\Signal\SignalBase.cpp" />
     <ClCompile Include="src\IdLib\Location.cpp" />
     <ClCompile Include="src\IdLib\IdLib.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\IdLib\Signal\Connection.hpp" />
+    <ClInclude Include="src\IdLib\Signal\ConnectionBase.hpp" />
+    <ClInclude Include="src\IdLib\Signal\Node.hpp" />
+    <ClInclude Include="src\IdLib\Signal\NodeBase.hpp" />
+    <ClInclude Include="src\IdLib\Signal\ScopedConnection.hpp" />
+    <ClInclude Include="src\IdLib\Signal\Signal.hpp" />
+    <ClInclude Include="src\IdLib\Signal\SignalBase.hpp" />
+    <ClInclude Include="src\IdLib\Signal\Include.hpp" />
     <ClInclude Include="src\IdLib\CompilationErrorException.hpp" />
     <ClInclude Include="src\IdLib\Token.hpp" />
     <ClInclude Include="src\IdLib\CRTP.hpp" />
