--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -9,6 +9,12 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Header Files\Signal">
+      <UniqueIdentifier>{5773c1da-cbc5-4ab9-95fc-a21e6ad133de}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Signal">
+      <UniqueIdentifier>{85d4351b-f275-4b8f-9a95-4e4cbb9b9b32}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\IdLib\IdLib.cpp">
@@ -16,6 +22,15 @@
     </ClCompile>
     <ClCompile Include="src\IdLib\Location.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\IdLib\Signal\ConnectionBase.cpp">
+      <Filter>Source Files\Signal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\IdLib\Signal\NodeBase.cpp">
+      <Filter>Source Files\Signal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\IdLib\Signal\SignalBase.cpp">
+      <Filter>Source Files\Signal</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +87,30 @@
     </ClInclude>
     <ClInclude Include="src\IdLib\CompilationErrorException.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\Connection.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\ConnectionBase.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\Node.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\NodeBase.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\ScopedConnection.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\Signal.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\SignalBase.hpp">
+      <Filter>Header Files\Signal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IdLib\Signal\Include.hpp">
+      <Filter>Header Files\Signal</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
